# 24-JLU-AI-Exam

./: .gitignore  Problems.md  README.md
exam01-04/: Tips.md
exam05/: Tips.md
exam06/: Tips.md
exam07/: Tips.md
exam08/: Tips.md
simulation/: README.md
simulation/sim_env/: CMakeLists.txt  package.xml
simulation/sim_env/launch/: sim_armor.launch.py  sim_color_num.launch.py
simulation/sim_env/maps/: color_num.pgm  color_num.yaml
simulation/sim_env/meshes/SIM2024JLURM/: JLURM2.dae
simulation/sim_env/meshes/mecanum_wheel/: small_Mecanum_01.dae  small_Mecanum_02.dae
simulation/sim_env/rviz/: jlurm.rviz
simulation/sim_env/urdf/sampleROBOT/: Robot.xacro  base.xacro  camera.xacro  imu.xacro  inertia.xacro  laser.xacro  move.xacro  wheel.xacro
simulation/sim_env/world/: empty_world.world
simulation/sim_env/world/SIM2024JLURM/: JLURM1.world  JLURM2.world  model.config  model.sdf
simulation/tools/slam_gmapping/launch/: slam_gmapping.launch.py
simulation/tools/slam_gmapping/src/: slam_gmapping.cpp
